# in-delivery-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  1. Временные указания к КР ШаблоныППЯД.docx  Caddyfile  Dockerfile  README.md  alembic.ini  compose.admin.yaml  compose.yaml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  Быченков отзыв на КР ШППЯД 2023.docx  Презентация_Быченков_ИКБО-32-21.pptx
api/v1/: router.py
certs/: fullchain.pem  privkey.pem
containers/keycloak/: Dockerfile  realm-export.json
database/: init.sql
db/: init_db.py  session.py
docs/db/: task1.md
models/: dish.py  menu.py  submenu.py
repositories/: submenu_repository.py
schemas/: dish.py  submenu.py
services/: dish_service.py  menu_service.py  submenu_service.py
src/: main.ipynb  main.py
src/api/: router.py
src/api/v1/: router.py
src/cache/: redis.py
src/configuration/: __init__.py  app.py  current.py  repository.py  service.py
src/core/: auth.py  config.py  context.py  dependencies.py
src/db/: __init__.py  init_db.py  session.py
src/graphql/: schema.graphql  schema.py
src/models/: __init__.py  category.py  good.py  product.py
src/repositories/: __init__.py  address_repository.py  cart_repository.py  category_repository.py  customer_repository.py  dish_repository.py  menu_repository.py  order_repository.py  product_repository.py  restaurant_repository.py  user_repository.py
src/schemas/: address.py  auth.py  cart.py  cart_product.py  category.py  customer.py  menu.py  order.py  order_product.py  product.py  request.py  restaurant.py  user.py
src/services/: __init__.py  address_service.py  auth_service.py  cart_product_service.py  cart_service.py  category_service.py  customer_service.py  geo_service.py  order_service.py  product_service.py  restaurant_service.py
src/sso/: config.py  keycloak.py
src/tests/: __init__.py
tests/: conftest.py
tests/api/: test_dish.py  test_menu.py
tests/integration/: test_dish_crud.py  test_menu_crud.py
(+28 files in other folders)
